--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "bin": {
   "librepod": "./librepod.js"
 },
+  "main":"main.js",
   "repository": {
   "type": "git",
   "url": "https://github.com/diltarget/librepod2"
@@ -20,9 +21,8 @@
   "dependencies": {
     "express": "4.14.0",
     "sqlite3": "*",
-    "socket.io":"*"
+    "socket.io":"*",
+    "threads":"*"
   },
-  "preferGlobal": true,
-  "private": true,
   "license": "GPLV3"
 }
